refactor: improved start-up flow